--- a/package.json
+++ b/package.json
@@ -1,19 +1,52 @@
 {
   "name": "punctuate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "version": "1.0.2-alpha",
+  "description": "A robust repository for replacing punctuation. it has no dependencies.",
+  "main": "dist/punctuate.common.js",
+  "module": "dist/punctuate.esm.js",
+  "unpkg": "dist/punctuate.min.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --fix"
+    "test": "jest --coverage",
+    "lint": "npx eslint src",
+    "build:lib": "rollup -c",
+    "build": "npm run lint && npm run test && npm run build:lib"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "punctuate",
+    "replace",
+    "replacer"
+  ],
+  "author": "liliangrong777<1198072497@qq.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/liliangrong777/punctuate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/liliangrong777/punctuate.git"
+  },
   "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.4.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "babel-jest": "^29.0.2",
+    "jest": "^29.0.0",
+    "@types/jest": "^29.0.0",
+    "eslint": "^7.32.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "eslint": "^7.32.0",
-    "typescript": "^4.4.3"
+    "rollup": "^2.79.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^4.2.0"
+  },
+  "engines": {
+    "//": "https://semver.npmjs.com/",
+    "node": "<15"
   }
 }
