--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "punctuate",
-  "version": "1.0.2-alpha",
+  "version": "1.0.3",
   "description": "A robust repository for replacing punctuation. it has no dependencies.",
   "main": "dist/punctuate.common.js",
   "module": "dist/punctuate.esm.js",
@@ -10,7 +10,8 @@
     "test": "jest --coverage",
     "lint": "npx eslint src",
     "build:lib": "rollup -c",
-    "build": "npm run lint && npm run test && npm run build:lib"
+    "build": "npm run lint && npm run test && npm run build:lib",
+    "prepare": "husky install"
   },
   "files": [
     "dist"
@@ -43,7 +44,8 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^4.2.0"
+    "rollup-plugin-dts": "^4.2.0",
+    "husky": "^8.0.0"
   },
   "engines": {
     "//": "https://semver.npmjs.com/",
